# llm-based-recommender

./: .gitignore  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml  requirements.txt
src/: config.py
src/api/: main.py
src/api/routers/: recommender.py
src/indexing/: data_loader.py  embedding.py
src/recommender/: check_topic_node.py  graph.py  llm_recommender.py  rag_node.py  ranker_node.py  retriever_node.py  self_query_node.py  state.py  utils.py
src/retriever/: hybrid_retriever.py
src/ui/: app.py
tests/: conftest.py  test_llm-recommender.py
