[project]
name = "llm-based-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.7.4",
    "fastapi==0.115.7",
    "kaggle==1.6.17",
    "langchain==0.3.15",
    "langchain-chroma==0.2.0",
    "langchain-community==0.3.15",
    "langchain-core==0.3.31",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.2",
    "loguru==0.7.3",
    "nemoguardrails==0.11.0",
    "numpy==1.26.4",
    "pandas==2.0.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "rank-bm25==0.2.2",
    "transformers==4.46.3",
]
